# quality-triage

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  skills.md
docs/: agent-interop.md  claude-code.md
scripts/: agent_review_examples.md
src/code_review_agent/: __init__.py  agent.py  cli.py  code_intel.py  config.py  github_utils.py  prompts.py  reporter.py  tools.py
tests/: gradio_report.py  test_config.py  test_github_utils.py  test_ollama_backend.py  test_tools.py
